# CourseWork6_skymarket

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ads/: urls.py
ads/migrations/: 0001_initial.py
ads/models/: __init__.py  ad.py  comments.py
ads/serializers/: __init__.py  comments.py
ads/views/: __init__.py  ad.py  comments.py
market_postgres/: docker-compose.yaml
skymarket/: asgi.py  settings.py  urls.py  wsgi.py
users/: email.py  managers.py  models.py
users/management/commands/: loadall.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py
