[tool.poetry]
name = "coursework6"
version = "0.1.0"
description = ""
authors = ["Olga Smotrova <olgahikaritattoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
postgres = "^4.0"
Django = "^4.1.1"
Pillow = "^9.2.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^4.4.0"
pytest = "^7.1.3"
pytest-factoryboy = "^2.5.0"
djoser = "^2.1.0"
drf-spectacular = "^0.24.0"
django-cors-headers = "^3.13.0"
idna = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
